@@ -1,3 +1,7 @@
+mkdocs-material-0.x.x (2016-xx-xx)
+
+  * Set download link to latest version if available
+
 mkdocs-material-0.1.1 (2016-02-11)
 
   * Fixed #1: GitHub stars don't work if the repo_url ends with a '/'
